	               + instead of removing generated packging-script files upon
		        `distclean', remove them on `gitclean'
		       + call fakeroot debian/rules clean
		       + remove NEWS and FAQ rules (dupped, as in man/Makefile.in)

	* debian/changelog.in: s/+0200/+0100/

	* debian/control.in: removed debian-specific bits

	* sawfish.spec.in: don't call autogen.sh

2010-01-02  Christopher Bratusek <zanghar@freenet.de>
	* po/Makefile.in: don't remove sawfish.pot upon distclean

	* sawfish.pc.in: export the imageloader sawfish is configured
	                 to make use of [required for sawfish-pager 0.7.2]

	* man/news.texi: revised and updated

	* sawfish.pc.in
	* sawfish.spec.in
	* debian/sawfish.install
	* src/Makefile.in: install headers to $includedir/sawfish/
	                   -- [required for sawfish-pager 0.7.2]

	* src/client.c
	* src/sawfish.h: updated for librep 0.90.5 header directory change

	* src/sawfish.h: include config.h, if available, else sawfish_config.h

	* configure.in: bump minimum librep to 0.90.5
	                bump minimum rep-gtk to 0.90.2

	* autogen.sh: added --nocfg flag for not running configure afterwards

	* sawfish.spec.in: improved [Kim B. Heino]

2009-12-30  Timo Korvola <tkorvola@iki.fi>
	* lisp/sawfish/wm/commands/shrink-yank.jl: fixed docstrings

2009-12-29  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: auto-generate debian/control

	* debian/control: clean-up, configure-magic

	* debian/sawfish.install: updated

	* man/news.texi: updated

	* configure.in
	* config.h.in
	* src/dlmalloc.c: removed our own dlmalloc, as it breaks too many arches,
	                  and is therefore never in use since several years [Kim B. Heino]

2009-12-28  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: use `kde4-config --install data' instead of `kde4-config --path data' [Kim B. Heino]

	* sawfish.spec.in: find kde4/librep directories while runtime instead of hardcoding [Kim B. Heino]
